--- a/market/seller/market-seller-test.yml
+++ b/market/seller/market-seller-test.yml
@@ -9,6 +9,6 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://47.75.176.242:30005/foodmarket?useUnicode=true&zeroDateTimeBehavior=convertToNull&characterEncoding=UTF-8&useSSL=false&allowMultiQueries=true
     username: root
-    password: root
+    password: mysql
 server:
   port: 8804
