--- a/market/seller/seller-service-test.yml
+++ b/market/seller/seller-service-test.yml
@@ -16,7 +16,7 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://47.75.176.242:30005/foodmarket?useUnicode=true&zeroDateTimeBehavior=convertToNull&characterEncoding=UTF-8&useSSL=false&allowMultiQueries=true
     username: root
-    password: 1JKkU0lG6o
+    password: root
 server:
   port: 8803
 eureka:
