--- a/market/seller/seller-service-test.yml
+++ b/market/seller/seller-service-test.yml
@@ -17,6 +17,11 @@ spring:
     url: jdbc:mysql://47.75.176.242:30005/foodmarket?useUnicode=true&zeroDateTimeBehavior=convertToNull&characterEncoding=UTF-8&useSSL=false&allowMultiQueries=true
     username: root
     password: 1JKkU0lG6o
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: admin
+    password: admin
 server:
   port: 8803
 eureka:
